--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="logo">
         <img
           class="logoimg"
-          src="Assests/src/logo-white.svg"
+          src="logo-white.svg"
           alt="website-logo"
         />
       </div>
@@ -64,7 +64,7 @@
     </header>
     <main>
       <div class="videobox">
-        <video class="video" autoplay loop muted src="Assests/hero.mp4"></video>
+        <video class="video" autoplay loop muted src="hero.mp4"></video>
       </div>
       <div class="page1">
         <h1 data-content="Eat. Drink. Play.">Eat. Drink. Play.</h1>
@@ -93,7 +93,7 @@
       <div class="gap"></div>
       <div class="aboutus">
         <div class="aboutimageleft aboutimage">
-          <img src="Assests/page2-left.avif" alt="about-left-image" />
+          <img src="page2-left.avif" alt="about-left-image" />
         </div>
         <div class="aboutbox">
           <h1 class="abouttitle">About us</h1>
@@ -110,11 +110,11 @@
           </p>
         </div>
         <div class="aboutimageright aboutimage">
-          <img src="Assests/page2-right.avif" alt="about-right-image" />
+          <img src="page2-right.avif" alt="about-right-image" />
         </div>
       </div>
       <div class="cards">
-        <div class="card card1" style="background: url(Assests/card1.avif)">
+        <div class="card card1" style="background: url(card1.avif)">
           <div class="cardin">
             <h1>Top tracer range</h1>
             <p>
@@ -130,7 +130,7 @@
         </div>
         <div
           class="card card2"
-          style="background-image: url(Assests/card2.webp)"
+          style="background-image: url(card2.webp)"
         >
           <div class="cardin">
             <h1>advanture golf</h1>
@@ -144,7 +144,7 @@
         </div>
         <div
           class="card card3"
-          style="background-image: url(Assests/card3.avif)"
+          style="background-image: url(card3.avif)"
         >
           <div class="cardin">
             <h1>golf Lessons</h1>
@@ -158,35 +158,35 @@
         </div>
       </div>
       <div class="banner">
-        <img src="Assests/src/dots-side.svg" alt="banner-dots-image1" />
+        <img src="dots-side.svg" alt="banner-dots-image1" />
         <h1>
           Sign up for Sidcup News and Special Offers Straight to Your Inbox
         </h1>
-        <img src="Assests/src/dots-side.svg" alt="banner-dots-image2" />
+        <img src="dots-side.svg" alt="banner-dots-image2" />
       </div>
       <div class="foodpage">
         <div class="foodbanner">
           <img
             class="foodpageimg"
-            src="Assests/src/dots-white.svg"
+            src="dots-white.svg"
             alt="foodbanner-dots-image1"
           />
           <div class="imgbox">
             <img
               class="img1 active"
-              src="Assests/card1.avif"
+              src="card1.avif"
               alt="banner-image1"
               data-content="1"
             />
             <img
               class="img2"
-              src="Assests/card2.webp"
+              src="card2.webp"
               alt="banner-image2"
               data-content="2"
             />
             <img
               class="img3"
-              src="Assests/card3.avif"
+              src="card3.avif"
               alt="banner-image3"
               data-content="3"
             />
@@ -235,7 +235,7 @@
       </div>
       <div class="gap"></div>
       <div class="quotes">
-        <img src="Assests/src/quote-left.svg" alt="quote-left-image" />
+        <img src="quote-left.svg" alt="quote-left-image" />
 
         <div class="quote qoute1 active">
           <h3>
@@ -298,7 +298,7 @@
             you’re getting close.
           </h3>
         </div>
-        <img src="Assests/src/quote-right.svg" alt="quote-right-image" />
+        <img src="quote-right.svg" alt="quote-right-image" />
       </div>
       <div class="gap"></div>
       <div class="cards2">
@@ -306,13 +306,13 @@
           <h1>WHAT ARE YOU WAITING FOR?</h1>
         </div>
         <div class="cardbox">
-          <div class="card2in" style="--img: url(Assests/card1.avif)">
+          <div class="card2in" style="--img: url(card1.avif)">
             <h2>TopTracer range</h2>
           </div>
-          <div class="card2in" style="--img: url(Assests/card2.webp)">
+          <div class="card2in" style="--img: url(card2.webp)">
             <h2>golf lessons</h2>
           </div>
-          <div class="card2in" style="--img: url(Assests/card3.avif)">
+          <div class="card2in" style="--img: url(card3.avif)">
             <h2>advanture golf</h2>
           </div>
         </div>
@@ -321,19 +321,19 @@
     <footer>
       <img
         class="footersideimg"
-        src="Assests/src/dots-white.svg"
+        src="dots-white.svg"
         alt="footer-white-dot-image"
       />
       <div class="footerbox">
         <div class="logobox">
           <img
-            src="Assests/src/logo-white.svg"
+            src="logo-white.svg"
             alt="website-logo"
             class="footerlogo"
           />
           <div class="socialicons">
-            <img src="Assests/facebook-svgrepo-com.svg" alt="facebook-logo" />
-            <img src="Assests/insta-svgrepo-com.svg" alt="insta-logo" />
+            <img src="facebook-svgrepo-com.svg" alt="facebook-logo" />
+            <img src="insta-svgrepo-com.svg" alt="insta-logo" />
           </div>
         </div>
         <div class="linkbox linkbox1">
